2005-03-21  Laurent Sansonetti  <lrz@gnome.org>

	Problems reported by Bas Kloet.

	* src/rbgstcaps.c: Fixed #initialize (GstCaps does not inherit from
	GstObject anymore) and API reference still referencing the deprecated
	Gst::Structure.
	* src/rbgstpad.c (#each_caps): Removed.
	* src/rbgststructure.c: Fixed hash-to-gst-structure conversion. 
	
2005-03-04  Laurent Sansonetti  <lrz@gnome.org>

	* src/rbgstregistrypool.c, src/rbgstschedulerfactory.c, src/rbgsttag.c,
	  src/rbgsttagsetter.c, src/rbgsttypefindfactory.c: Updated API reference.

2005-02-23  Laurent Sansonetti  <lrz@gnome.org>

	* src/rbgstregistrypool.c: Added.
	* src/rbgsttagsetter.c: Added.
	* src/rbgst.c: Initializes Gst::RegistryPool and Gst::TagSetter.
	* src/rbgst.h: Added helper macro for Gst::TagSetter and Gst::Plugin.
	* src/rbgstscheduler.c (Gst::Scheduler::Flags): Added.
	* src/rbgstschedulerfactory.c (::default_name, ::set_default_name): Added.
	* src/rbgstthread.c (::current): Added.
	* src/rbgsttypefindfactory.c (#extensions): Implemented.
	* src/rbgstxml.c (#parse_memory): Added.

2005-02-21  Laurent Sansonetti  <lrz@gnome.org>

	* src/rbgst.c: Initialize Gst::Tag, do not initialize Gst::Structure.
	* src/rbgst.h: Removed helper macros for Gst::Structure.
	* src/rbgsttag.c: Added.
	* src/rbgstcaps.c: Convert Gst::Structure to Hash.
	* src/rbgstmediainfo.c: 
	  - #initialize throws Gst::MediaInfoError upon problems ;
	  - Added #set_source ;
	  - #metadata and #streaminfo now return a Hash (instead of a Gst::Structure).
	* src/rbgstplugin.c: 
	  - Added #major_version, #minor_version, #version ;
	  - Added missing documentation.
	* src/rbgststructure.c: 
	  - Deprecated Gst::Structure ;
	  - Added two functions to convert Ruby Hash to Gst::Structure and vice-versa.
	* sample/media-type.rb, sample/gst-inspect.rb: Follow these changes.

2005-02-09  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgstmediainfo.c: Added Gst::MediaInfoError.
	Raise an Gst::MediaInfoError when an error raised in 