@@ -5,9 +5,10 @@
 	* src/rbgstcaps.c: Fixed #initialize (GstCaps does not inherit from
 	GstObject anymore) and API reference still referencing the deprecated
 	Gst::Structure.
-	* src/rbgstpad.c (#each_caps): Removed.
+	* src/rbgstpad.c (#each_caps): Removed, (#link_filtered): Added.
 	* src/rbgststructure.c: Fixed hash-to-gst-structure conversion. 
-	
+	* src/rbgstelement.c (#link_filtered): Added.
+
 2005-03-04  Laurent Sansonetti  <lrz@gnome.org>
 
 	* src/rbgstregistrypool.c, src/rbgstschedulerfactory.c, src/rbgsttag.c,
